# ws-deque

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: vs_crossbeam.rs
examples/: branch_and_bound.rs  fib.rs  lifeline.rs  work_inflation.rs
research/: GAPS.md  SYNTHESIS.md
src/: bwos.rs  distributed.rs  idempotent.rs  inline.rs  jiffy.rs  lib.rs  linked.rs  persistent.rs  priority.rs  race.rs  scheduler.rs
tests/: crossbeam_fifo.rs  crossbeam_lifo.rs  crossbeam_steal.rs
