[package]
name = "ws-deque"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Cole Leavitt"]
license = "MIT OR Apache-2.0"
description = "A lock-free, dependency-free, ThreadSanitizer-clean Chase-Lev work-stealing deque"
repository = "https://github.com/coleleavitt/ws-deque"
readme = "README.md"
keywords = ["work-stealing", "deque", "lock-free", "concurrency", "chase-lev"]
categories = ["concurrency", "data-structures"]
exclude = ["research/*.pdf"]

[lib]
name = "ws_deque"
path = "src/lib.rs"

[[example]]
name = "fib"
path = "examples/fib.rs"

[profile.release]
lto = true
codegen-units = 1
