[package]
name = "ws-deque"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
authors = ["Cole Leavitt"]
license = "MIT OR Apache-2.0"
description = "A lock-free, dependency-free, ThreadSanitizer-clean Chase-Lev work-stealing deque"
repository = "https://github.com/coleleavitt/ws-deque"
readme = "README.md"
keywords = ["work-stealing", "deque", "lock-free", "concurrency", "chase-lev"]
categories = ["concurrency", "data-structures"]
exclude = ["research/*.pdf"]

[lib]
name = "ws_deque"
path = "src/lib.rs"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[example]]
name = "fib"
path = "examples/fib.rs"

[dev-dependencies]
crossbeam-deque = "0.8"
criterion = "0.5"

[[bench]]
name = "vs_crossbeam"
harness = false

[profile.release]
lto = true
codegen-units = 1
