[package]
name = "ws-deque"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
authors = ["Cole Leavitt"]
license = "MIT OR Apache-2.0"
description = "Lock-free, ThreadSanitizer- and loom-clean work-stealing primitives: a Chase-Lev deque, fence-free WS-MULT queues, a Jiffy MPSC injector, and a lifeline fork-join scheduler"
repository = "https://github.com/coleleavitt/ws-deque"
homepage = "https://github.com/coleleavitt/ws-deque"
documentation = "https://docs.rs/ws-deque"
readme = "README.md"
keywords = ["work-stealing", "deque", "lock-free", "concurrency", "scheduler"]
categories = ["concurrency", "data-structures", "algorithms"]
# Keep the published crate lean: ship code, README, license, and the design synthesis docs —
# but not the bulky research artifacts (PDFs / extracted text) or CI config.
exclude = [
    "research/*.pdf",
    "research/*.txt",
    ".github/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "ws_deque"
path = "src/lib.rs"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(docsrs)', 'cfg(bwos_trace)'] }

[[example]]
name = "fib"
path = "examples/fib.rs"

[[example]]
name = "lifeline"
path = "examples/lifeline.rs"

[[example]]
name = "branch_and_bound"
path = "examples/branch_and_bound.rs"

[[example]]
name = "work_inflation"
path = "examples/work_inflation.rs"

[dev-dependencies]
crossbeam-deque = "0.8"
criterion = "0.5"
fastrand = "2"

[[bench]]
name = "vs_crossbeam"
harness = false

[profile.release]
lto = true
codegen-units = 1
